Arreglado bug del z-index con el navbar y el menu desplegable

--- a/static/styl/main.styl
+++ b/static/styl/main.styl
@@ -13,6 +13,7 @@ azul_mozart = #2475E0
 	position fixed
 	top 0
 	width 100%
+	z-index 3
 
 .Header-button
 	color naranja_mozart
@@ -33,6 +34,7 @@ azul_mozart = #2475E0
 	text-align center
 	top 3.5em
 	width 100%
+	z-index 2
 
 .Navbar-link
 	color #538DEC
@@ -98,3 +100,10 @@ azul_mozart = #2475E0
 	
 	
 	
+
+.Work-container
+	margin-top 6.7em
+	padding-top 0.6em
+	position relative
+	text-align center
+	width 100%
